# nexus

./: .env.example  .gitignore  AGENT_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY_PERSISTENCE_GUIDE.md  README.md  README_SIMPLE.md  ROBUSTNESS_FIXES.md  SARVAM_INTEGRATION.md  TESTING_GUIDE.md  architecture_overview.md  inspect_supermemory.py  list_models.py  model_usage_guide.md  plan.md  pyproject.toml  requirements.txt  test_robustness_fixes.py  test_supermemory_add.py
.github/workflows/: ci.yml  release.yml
docs/: API_KEY_ROTATION_GUIDE.md  FUTURE_SCOPE.md  GROQ_GPT_FALLBACK.md  SECURITY.md  TESTING.md  architecture_overview.md  model_usage_guide.md
src/jarvis/: main.py
src/jarvis/ai/: __init__.py  command_generator.py  context_condenser.py  decision_engine.py  llm_client.py  memory_client.py  sarvam_client.py
src/jarvis/core/: __init__.py  api_key_rotator.py  audit_logger.py  command_validator.py  config_manager.py  executor.py  model_catalog.py  orchestrator.py  persistent_session_manager.py  security.py  session_manager.py  system_detector.py
src/jarvis/modules/: __init__.py  browser_manager.py  package_manager.py  translator.py  video_manager.py
src/jarvis/ui/: console_app.py  multilingual_ui.py  onboarding.py
src/jarvis/utils/: io.py  syntax_output.py
tests/: conftest.py  test_audit_logger.py  test_command_generator.py  test_config_manager.py  test_decision_engine.py  test_executor.py  test_llm_client.py  test_model_catalog.py  test_orchestrator.py  test_package_manager.py  test_planner.py  test_security.py  test_session_manager.py
