[project]
name = "nexus"
version = "0.1.0"
description = "An intelligent, terminal-based AI Linux assistant."
authors = [
    {name = "garvit", email = "garvitjoshi543@gmail.com"},
]

# Core — the minimal set needed to start Nexus and run all unit tests.
# Heavy AI/browser libs are in optional extras below.
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "distro>=1.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyfiglet>=0.8.post1",
    "prompt_toolkit>=3.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
# pip install nexus[ai]  — LLM providers (needed for real use)
ai = [
    "google-genai>=0.3.0",
    "openai>=1.0.0",
    "langchain-google-genai>=0.0.1",
    "langchain-openai>=0.0.1",
    "groq>=0.9.0",
    "anthropic>=0.40.0",
    "supermemory>=3.23.0",
]

# pip install nexus[browser]  — browser automation (needed for /browse)
browser = [
    "browser-use>=0.1.0",
    "browser-use-sdk>=0.0.1",
    "playwright>=1.40.0",
]

# pip install nexus[all]  — everything (production install)
all = [
    "google-genai>=0.3.0",
    "openai>=1.0.0",
    "langchain-google-genai>=0.0.1",
    "langchain-openai>=0.0.1",
    "groq>=0.9.0",
    "anthropic>=0.40.0",
    "supermemory>=3.23.0",
    "browser-use>=0.1.0",
    "browser-use-sdk>=0.0.1",
    "playwright>=1.40.0",
]

# pip install nexus[dev]  — unit tests only (used in CI)
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
nexus = "jarvis.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E402",   # module-level import not at top — main.py needs load_dotenv() first
    "E741",   # ambiguous variable name — used in comprehensions for brevity
]

[tool.ruff.lint.per-file-ignores]
"src/jarvis/core/__init__.py" = ["F401"]   # re-exports
"src/jarvis/modules/__init__.py" = ["F401"] # re-exports

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
